--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
 }
 
-body{
+/* body{
     font-family: 'Montserrat', sans-serif;
     
    
@@ -28,4 +28,4 @@ video{
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
