--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
 *{
     margin: 0;
     padding: 0;
+    font-size: 200px;
+    text-align: center;
+    margin-top: 150px;
 }
 
 /* body{
@@ -29,4 +32,6 @@ video{
     justify-content: center;
     align-items: center;
 } */
+
+
 
